<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/clipboard">
		<SwitchPreference
			android:defaultValue="false"
			android:key="copy_key"
			android:summary="@string/copy_summary"
			android:title="@string/copy_title"/>
		<Preference
			android:key="test"
			android:title="@string/test"/>
		<EditTextPreference
			android:defaultValue="6"
			android:inputType="number"
			android:key="duration"
			android:summary="@string/hide_summary"
			android:title="@string/hide_title"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/general">
		<MultiSelectListPreference
			android:defaultValue="@array/engines_values"
			android:entries="@array/engines"
			android:entryValues="@array/engines_values"
			android:key="engines"
			android:title="@string/engines_title"/>

	</PreferenceCategory>

</PreferenceScreen>